<resources>
    <string name="app_name">Olympik</string>
    <string name="btn_am_student">Sou aluno</string>
    <string name="btn_am_adm">Sou administrador</string>
    <string name="btn_turn_back">Voltar</string>
    <string name="dont_have_an_account_yet">Ainda não tem uma conta?</string>
    <string name="click_here_to_create_an_account">Clique aqui para criar a sua conta</string>
    <string name="email_or_cpf">Email ou CPF</string>
    <string name="hint_email_or_cpf">Digite o seu email ou cpf</string>
    <string name="password">Senha</string>
    <string name="hint_password">Digite a sua senha</string>
    <string name="access">Acessar</string>
    <string name="hint_cnpj">Digite o seu CNPJ(somente números)</string>
    <string name="dont_have_register">Ainda não tem uma conta?</string>
    <string name="btn_sign_up">Cadastrar</string>
    <string name="register_gym">Cadastrar Academia</string>
    <string name="register_student">Cadastrar Aluno</string>
    <string name="email">Email</string>
    <string name="birth_date">Data de nascimento</string>
    <string name="full_name">Nome Completo</string>
    <string name="hint_cpf">CPF(somente números)</string>
    <string name="hint_phone_number">Telefone(somente números)</string>
    <string name="business_name">Nome Empresarial</string>
    <string name="cnpj">CNPJ</string>
    <string name="fantasy_name">Nome fantasia</string>
    <string name="postal_code">CEP</string>
    <string name="address">Endereço</string>
    <string name="state">Estado</string>
    <string name="city">Cidade</string>
    <string name="next">Próximo</string>
    <string name="register_measurements">Insira as suas medidas</string>
    <string name="weight">Peso</string>
    <string name="height">Altura</string>
    <string name="chest">Tórax</string>
    <string name="shoulder">Ombro</string>
    <string name="left_arm">Braço Esquerdo</string>
    <string name="right_arm">Braço Direito</string>
    <string name="abdomen">Abdômen</string>
    <string name="left_thighs">Coxa Esquerda</string>
    <string name="right_thighs">Coxa Direita</string>
    <string name="left_calves">Panturrilha Esquerda</string>
    <string name="right_calves">Panturrilha Direita</string>
    <string name="insert">Inserir</string>
    <string name="jump">Pular</string>
    <string name="hello">Olá (nome do aluno)</string>
    <string name="my_frequency">Minha frequência</string>
    <string name="workout_today_is">O seu treino de hoje é: </string>
    <string name="measurements">Medidas</string>
    <string name="workout">Treino</string>
    <string name="home">Home</string>
    <string name="frequency">Frequência</string>
    <string name="profile">Meu Perfil</string>
    <string name="training">Treinos</string>
    <string name="name_training">Nome do treino</string>
    <string name="new_training">Novo treino</string>
    <string name="select_exercises">Selecione os exercícios</string>
    <string name="cancel">Cancelar</string>
    <string name="create">Criar</string>
    <string name="exercices">Exercícios</string>
    <string name="small_description">Pequena descrição</string>
    <string name="date">Data:</string>
    <string name="num_rep">Series e repetições</string>
    <string name="name_exercise">Nome do exercício</string>
    <string name="num_repetitions">Num. Rep</string>
    <string name="conclude">Concluir</string>
    <string name="date_example">22/02/2022</string>
    <string name="my_profile">Meu Perfil</string>
    <string name="my_data">Meus dados</string>
    <string name="my_adress">Meu endereço</string>
    <string name="change_password">Mudar senha</string>
    <string name="update">Atualizar</string>
    <string name="current_password">Senha atual</string>
    <string name="txt_password">Defina uma senha com no mínimo 6 caracteres</string>
    <string name="new_password">Nova senha</string>
    <string name="repeat_new_password">Repita a nova senha</string>
    <string name="see_student">Ver alunos</string>
    <string name="student_profile">Perfil do aluno</string>
    <string name="user_data">Dados do aluno</string>
    <string name="user_trainings">Treinos do aluno</string>
    <string name="measurements_progress">Progresso de medidas</string>
    <string name="student_training">Treinos do aluno</string>
    <string name="invalid_email">Email inválido</string>
    <string name="invalid_password">Senha deve ter no mínimo 6 caracteres</string>
    <string name="lorem_ipsum">Musculo trabalhado: \nDescrição: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ac ante sit amet justo porta venenatis. Nulla odio est, sagittis a sapien at, vulputate malesuada turpis. Proin nec cursus orci, id suscipit ex. Aliquam sit amet quam at dui elementum rhoncus. Nullam id lorem leo. Donec lacinia libero ac nibh hendrerit fermentum.</string>
    <string name="discovery">Descobrir</string>
    <string name="user_name">Nome do usuário</string>
    <string name="hint_user_name">Digite o seu email</string>
    <string name="re_password">Repita a senha</string>
    <string name="invalid_name">Preencha com nome e sobrenome</string>
    <string name="invalid_sex">Selecione um sexo</string>
    <string name="invalid_birth">Insira sua data de nascimento</string>
    <string name="invalid_cpf">CPF inválido</string>
    <string name="invalid_phone">Insira o número de telefone com DDD</string>
    <string name="invalid_confirm">Senha e confirmar a senha devem ser iguais</string>
    <string name="invalid_cnpj">CNPJ inválido</string>
    <string name="invalid_business_name">Nome inválido</string>
    <string name="invalid_fantasy_name">Nome inválido</string>
    <string name="invalid_cep">CEP inválido</string>
    <string name="invalid_address">Endereço inválido</string>
    <string name="invalid_state">Selecione um estado</string>
    <string name="invalid_city">Selecione uma cidade</string>
    <string name="invalid_measurement">Campo obrigatório</string>
    <string name="students">Alunos</string>
    <string name="update_measurements">Atualizar medidas</string>
    <string name="create_success">Conta criada com sucesso!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_error">Email ou senha inválido</string>
    <string name="chest_triceps">Peito e tríceps</string>
</resources>