<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ln"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingTop="10dp"
    android:background="@color/white"
    tools:context=".FirstBodyMeasurementsActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/icon_olimpik" />

    <TextView
        style="@style/textViewTitle"
        android:text="@string/register_measurements" />

    <EditText
        style="@style/editTextNumbers"
        android:hint="@string/weight" />

    <EditText
        style="@style/editTextNumbers"
        android:hint="@string/height" />

    <EditText
        style="@style/editTextNumbers"
        android:hint="@string/chest" />

    <EditText
        style="@style/editTextNumbers"
        android:hint="@string/shoulder" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            style="@style/editTextNumbers"
            android:hint="@string/left_arm"
            android:layout_marginEnd="5dp"
            android:layout_weight="1" />

        <EditText
            style="@style/editTextNumbers"
            android:hint="@string/right_arm"
            android:layout_marginStart="5dp"
            android:layout_weight="1" />
    </LinearLayout>

    <EditText
        style="@style/editTextNumbers"
        android:hint="@string/abdomen" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            style="@style/editTextNumbers"
            android:hint="@string/left_thighs"
            android:layout_marginEnd="5dp"
            android:layout_weight="1" />

        <EditText
            style="@style/editTextNumbers"
            android:hint="@string/right_thighs"
            android:layout_marginStart="5dp"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            style="@style/editTextNumbers"
            android:hint="@string/left_calves"
            android:layout_marginEnd="5dp"
            android:layout_weight="1" />

        <EditText
            style="@style/editTextNumbers"
            android:hint="@string/right_calves"
            android:layout_marginStart="5dp"
            android:layout_weight="1" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            style="@style/textView"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:text="@string/jump"
            android:paddingBottom="2dp"
            app:layout_constraintEnd_toStartOf="@id/btnInsertMeasurements"
            app:layout_constraintBottom_toBottomOf="@id/btnInsertMeasurements"
            />

        <Button
            android:id="@+id/btnInsertMeasurements"
            style="@style/button_common"
            android:text="@string/insert"
            android:layout_width="100dp"
            android:padding="12dp"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/btnTurnBack"
            style="@style/button_common"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="100dp"
            android:layout_marginStart="0dp"
            android:padding="12dp"
            android:layout_marginBottom="16dp"
            android:text="@string/btn_turn_back" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>