<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:id="@+id/ln"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        tools:context=".register.view.RegisterAdmActivity">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/icon_olimpik" />

        <TextView
            style="@style/textViewTitle"
            android:text="@string/register_gym" />

        <EditText
            android:id="@+id/register_adm_edit_full_name"
            android:inputType="textPersonName"
            style="@style/editText"
            android:hint="@string/full_name" />

        <EditText
            android:id="@+id/register_adm_edit_cpf"
            style="@style/editText"
            android:hint="@string/cpf"
            android:inputType="number" />

        <EditText
            android:id="@+id/register_adm_edit_phone_number"
            style="@style/editText"
            android:hint="@string/phone_number"
            android:inputType="number" />

        <EditText
            android:id="@+id/register_adm_edit_email"
            style="@style/editText"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/register_adm_edit_cnpj"
            style="@style/editText"
            android:inputType="number"
            android:hint="@string/cnpj" />

        <EditText
            android:id="@+id/register_adm_edit_business_name"
            style="@style/editText"
            android:hint="@string/business_name" />

        <EditText
            android:id="@+id/register_adm_edit_fantasy_name"
            style="@style/editText"
            android:hint="@string/fantasy_name" />

        <EditText
            android:id="@+id/register_adm_edit_cep"
            style="@style/editText"
            android:hint="@string/postal_code"
            android:inputType="number" />

        <EditText
            android:id="@+id/register_adm_edit_address"
            style="@style/editText"
            android:hint="@string/address" />

        <EditText
            android:id="@+id/register_adm_edit_state"
            style="@style/editText"
            android:hint="@string/state" />

        <EditText
            android:id="@+id/register_adm_edit_city"
            style="@style/editText"
            android:hint="@string/city" />
        <com.example.olympik.common.view.LoadingButton
            android:id="@+id/btn_register_adm"
            style="@style/button_login"
            android:padding="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/btn_sign_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sv"
            />

        <Button
            android:id="@+id/btn_back_choose_account"
            style="@style/button_common"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/btn_turn_back" />

    </LinearLayout>


</ScrollView>
