<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:paddingTop="10dp"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".auth.login.LoginFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="195dp"
        android:layout_height="195dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/icon_olimpik" />

    <TextView
        style="@style/textView"
        android:text="@string/email" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_edit_email_input"
        style="@style/editTextInput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_edit_email"
            style="@style/editText"
            android:hint="@string/hint_user_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        style="@style/textView"
        android:text="@string/password" />
    <com.google.android.material.textfield.TextInputLayout
        style="@style/editTextInput"
        android:id="@+id/login_edit_password_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_edit_password"
            style="@style/editText"
            android:inputType="textPassword"
            android:hint="@string/hint_password" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.example.olympik.common.view.LoadingButton
        android:id="@+id/login_btn_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:text="@string/access"/>

    <TextView
        style="@style/textView"
        android:layout_marginTop="0dp"
        android:layout_gravity="center"
        android:text="@string/dont_have_register"/>

    <TextView
        android:id="@+id/login_txt_click_to_register"
        style="@style/textView"
        android:textColor="@color/orange"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:text="@string/click_here_to_create_an_account"/>
</LinearLayout>