<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ln"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingTop="10dp"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/icon_olimpik"/>

    <TextView
        style="@style/textViewTitle"
        android:text="@string/register_measurements"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_m_weight_input"
        style="@style/editTextInput"
        android:layout_marginBottom="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_m_weight"
            style="@style/editTextNumbers"
            android:hint="@string/weight"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_m_height_input"
        style="@style/editTextInput"
        android:layout_marginBottom="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_m_height"
            style="@style/editTextNumbers"
            android:hint="@string/height"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_m_chest_input"
        style="@style/editTextInput"
        android:layout_marginBottom="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_m_chest"
            style="@style/editTextNumbers"
            android:hint="@string/chest"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_m_shoulder_input"
        style="@style/editTextInput"
        android:layout_marginBottom="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_m_shoulder"
            style="@style/editTextNumbers"
            android:hint="@string/shoulder"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_m_left_arm_input"
            style="@style/editTextInput"
            android:layout_marginBottom="0dp"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_m_left_arm"
                style="@style/editTextNumbers"
                android:hint="@string/left_arm"
                android:layout_marginEnd="5dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_m_right_arm_input"
            style="@style/editTextInput"
            android:layout_marginBottom="0dp"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_m_right_arm"
                style="@style/editTextNumbers"
                android:hint="@string/right_arm"
                android:layout_marginStart="5dp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_m_abdomen_input"
        style="@style/editTextInput"
        android:layout_marginBottom="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_m_abdomen"
            style="@style/editTextNumbers"
            android:hint="@string/abdomen" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_m_left_thighs_input"
            style="@style/editTextInput"
            android:layout_marginBottom="0dp"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_m_left_thighs"
                style="@style/editTextNumbers"
                android:hint="@string/left_thighs"
                android:layout_marginEnd="5dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_m_right_thighs_input"
            style="@style/editTextInput"
            android:layout_marginBottom="0dp"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_m_right_thighs"
                style="@style/editTextNumbers"
                android:hint="@string/right_thighs"
                android:layout_marginStart="5dp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_m_left_calves_input"
            style="@style/editTextInput"
            android:layout_marginBottom="0dp"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_m_left_calves"
                style="@style/editTextNumbers"
                android:hint="@string/left_calves"
                android:layout_marginEnd="5dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_m_right_calves_input"
            style="@style/editTextInput"
            android:layout_marginBottom="0dp"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_m_right_calves"
                style="@style/editTextNumbers"
                android:hint="@string/right_calves"
                android:layout_marginStart="5dp"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/register_m_btn_next"
            style="@style/textView"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:text="@string/jump"
            android:paddingBottom="2dp"
            app:layout_constraintTop_toTopOf="@id/register_measurements_btn_insert"
            app:layout_constraintEnd_toStartOf="@id/register_measurements_btn_insert" />

        <com.example.olympik.common.view.LoadingButton
            android:id="@+id/register_measurements_btn_insert"
            style="@style/button_loading"
            android:layout_width="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="0dp"
            android:padding="0dp"
            app:text="@string/insert"/>

        <Button
            android:id="@+id/first_measurements_btn_back"
            style="@style/button_common"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="100dp"
            android:layout_marginStart="0dp"
            android:padding="12dp"
            android:layout_marginBottom="16dp"
            android:text="@string/btn_turn_back" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>