<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginVertical="10dp"
    android:layout_marginHorizontal="5dp"
    android:background="@drawable/training_view_style">

    <TextView
        android:id="@+id/txt_measurements"
        style="@style/textViewTitle"
        android:text="@string/measurements"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/txt_small_description"
        style="@style/textView"
        android:text="@string/small_description"
        android:paddingStart="5dp"
        android:layout_marginTop="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_measurements"
        />
    <TextView
        android:id="@+id/txt_date"
        style="@style/textView"
        android:text="@string/date"
        android:paddingStart="5dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@id/txt_small_description"
        app:layout_constraintStart_toStartOf="parent"/>
    <Button
        style="@style/button_common"
        android:text="@string/access"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>