<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="2dp"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/training_txt_training"
        style="@style/textViewTitle"
        android:paddingTop="8dp"
        android:text="@string/my_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_bottom_txt_password"
        style="@style/line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_password" />

    <TextView
        android:id="@+id/txt_password"
        style="@style/textView"
        android:text="@string/txt_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_bottom_training_title"/>

    <View
        android:id="@+id/view_bottom_training_title"
        style="@style/line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/training_txt_training" />

    <LinearLayout
        android:id="@+id/ln"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_bottom_txt_password">

        <TextView
            style="@style/textView.profile"
            android:text="@string/current_password" />

        <EditText style="@style/editText" />

        <TextView
            style="@style/textView.profile"
            android:text="@string/new_password" />

        <EditText style="@style/editText" />

        <TextView
            style="@style/textView.profile"
            android:text="@string/repeat_new_password" />

        <EditText style="@style/editText" />

    </LinearLayout>
    <Button
        style="@style/button_common"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ln"
        android:text="@string/update"
        android:layout_margin="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>